fix blog page spacing

--- a/themes/carvel/assets/scss/_components.scss
+++ b/themes/carvel/assets/scss/_components.scss
@@ -416,7 +416,7 @@
 }
 .docs {
     background-color: #fff;
-    margin-top: -90px;
+    margin-top: -100px;
     padding: 50px 30px 50px 30px;
     h1 {
         color: #000;
@@ -563,6 +563,7 @@
 
 .blog {
     padding-bottom: 50px;
+    padding: 50px 30px 50px 30px;
     .col {
         border: 1px solid $lightgrey;
         img {
@@ -574,7 +575,7 @@
     }
     &.landing {
         background-color: #fff;
-        margin-top: -90px;
+        margin-top: -100px;
         h3 a {
             font-size: 16px;
         }
@@ -668,7 +669,7 @@
 
 .community {
     background-color: #fff;
-    margin-top: -90px;
+    margin-top: -100px;
     padding: 30px 30px 50px 30px;
     .grid {
         .col {
